--- a/bookish-mvc/bookish-mvc/Views/Books/GetBooks.cshtml
+++ b/bookish-mvc/bookish-mvc/Views/Books/GetBooks.cshtml
@@ -4,7 +4,20 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Here is a list of books</p>
-    @* @{for each Book in book } *@
+    <h1 class="page-title">Welcome</h1>
+    <ul class="book-list">
+        @{
+            foreach (var book in Model.BookList)
+            {
+                <li>
+                    <h3 class="book-title">@book.Title</h3>
+                    <div class="book-info">
+                        <p class="book-author">Author : @book.Author</p>
+                        <p class="book-isbn">ISBN : <a href="https://isbnsearch.org/isbn/@book.Isbn">@book.Isbn</a></p>
+                        <p class="book-publisher">Published by @book.Publisher in @book.PublishYear</p>
+                    </div>
+                </li>
+            }
+        }
+    </ul>
 </div>
